[package]
name = "dbc"
version = "0.3.3"
authors = ["Luis Pabón <lpabon@gmail.com>"]
description = "Simple design by contract assertions"
repository = "https://github.com/lpabon/rust-dbc"
homepage = "https://github.com/lpabon/rust-dbc"
keyworks = ["dbc", "hoare", "assert"]
categories = ["development-tools::debugging", "development-tools::testing"]
license = "LGPL-3.0"
readme = "README.md"

[badges]
travis-ci = { repository = "lpabon/rust-dbc", branch = "master"  }

[lib]
name = "dbc"
plugin = true
crate-type = ["lib", "dylib"]

[dependencies]
